# taproot

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  PRD.md  README.md  README.zh-CN.md  SECURITY.md  SUPPORT.md  nodes.yaml.example  pyproject.toml
.github/workflows/: ci.yml  release.yml
src/taproot_mcp/: __init__.py  __main__.py  approvals.py  config.py  history.py  models.py  server.py  sessions.py  ssh_pool.py  targeting.py
taproot-plugin/: .vscodeignore  LICENSE  README.md  Taproot VS Code Extension_副本.html  package-lock.json  package.json  tsconfig.json
taproot-plugin/backend/: taproot_mcp-0.2.1-py3-none-any.whl  taproot_mcp-0.2.2-py3-none-any.whl
taproot-plugin/media/: dashboard.css  dashboard.js
taproot-plugin/src/: agentPrompt.ts  approvalModel.ts  backendInstall.ts  configModel.ts  extension.ts  processError.ts  serverStartup.ts
taproot-plugin/test/: agentPrompt.test.ts  approvalModel.test.ts  backendInstall.test.ts  configModel.test.ts  harness.html  manifest.test.ts  serverStartup.test.ts  taprootCheck.test.ts  verify-vsix.js  webview.test.ts
taproot-plugin/test/vscode-smoke/: run.js  suite.js
test-flow/: README.md  TEST_CASES.md
test-flow/codex/: config-snippet.toml
test-flow/fixtures/: nodes.localhost.yaml  sample-config.yaml
test-flow/fixtures/upload/: install.sh
test-flow/scripts/: codex_smoke.md  run-all.sh
test-flow/tests/: test_approvals.py  test_config_targeting.py  test_history.py  test_local_ssh_v01.py  test_local_tmux_v02.py  test_models_and_contract.py
