[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "taproot-mcp"
version = "0.2.0"
description = "Fleet-level MCP server for SSH-managed clusters"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "asyncssh>=2.14",
  "mcp[cli]>=1.27,<2",
  "pyyaml>=6.0",
]

[project.optional-dependencies]
test = [
  "pytest>=8.0",
  "pytest-asyncio>=0.23",
]

[project.scripts]
taproot-mcp = "taproot_mcp.__main__:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["test-flow/tests"]
